...

//MARK: CharacterList modifier
private struct CharacterListStyle: ViewModifier {
    func body(content: Content) -> some View {
        content
            .listStyle(.plain)
            .accessibilityIdentifier("CharactersList")
            .scrollIndicators(.hidden)
            .scrollContentBackground(.hidden)
            .navigationTitle(NSLocalizedString("RickStar", comment: ""))
    }
}

...
            .navigationBarBackButtonHidden(true)
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button(action: { dismissAction() }) {
                        HStack(spacing: 4) {
                            Image(systemName: "chevron.backward")
                            Text("Back")
                        }
                    }
                }
            }
    }
}
...
